# ghostie-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: FORMAT.md  GOAL.md  PROVENANCE.md  SYNC.md
scripts/: ci-local.sh  verify.sh
src/: capture.rs  cli.rs  codex.rs  crypt.rs  decay.rs  distill.rs  error.rs  hook.rs  json.rs  lib.rs  main.rs  mcp.rs  provenance.rs  redact.rs  review.rs  sync.rs  util.rs
src/recall/: bm25.rs  embed.rs  explain.rs  mod.rs  ppr.rs  tokenize.rs
src/store/: frontmatter.rs  index.rs  memory.rs  mod.rs
tests/: cli_e2e.rs  dogfood.rs  eval.rs  json_codec.rs  provenance_e2e.rs  recall_goldens.rs  store_goldens.rs  store_handedit.rs
tests/fixtures/dogfood/: expectations.json
tests/fixtures/dogfood/memories/: decision-chose-fixed-point-scoring-over-floats-1.md  decision-pinned-the-rust-toolchain-1.md  decision-sqlite-rejected-for-storage-1.md  fact-ci-runs-on-debian-1.md  fact-default-config-path-is-etc-lantern-toml-1.md  fact-lantern-repo-layout-1.md  fact-parseeventstream-is-the-hot-path-1.md  fact-release-artifacts-live-in-dist-1.md  rule-always-run-verify-sh-before-commit-1.md  rule-never-log-raw-user-paths-1.md  rule-sync-branch-is-sync-never-main-1.md  rule-tag-releases-with-semver-1.md  session-summary-added-jsonl-reader-for-event-logs-1.md  session-summary-fixed-tokenizer-bug-dropping-digits-1.md
tests/fixtures/store/: decision-golden-example-1.md  fact-golden-example-1.md  rule-golden-example-1.md  session-summary-golden-example-1.md
(+11 files in other folders)
