[package]
name = "ghostie"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Provider-agnostic memory you own: plain-file store, deterministic graph-aware recall, and one-command cross-device sync. Rust, std-only, zero dependencies."
repository = "https://github.com/jonathanpopham/ghostie-rs"

[dependencies]

# Optional, deliberately-impure model-driven distillation for `capture`. OFF by
# default so the shipped build stays airgap-pure and zero-dependency; the empty
# feature list keeps [dependencies] empty (the gate greps for that). When on,
# capture may shell out to an external agent CLI (a tool, not a crate) — exactly
# as sync shells to `git` — and falls back to the std-only heuristic distiller.
[features]
distill = []
